# rboson

./: .gitignore  Cargo.toml  LICENSE  default.conf  main.rs
apps/cbor/: main.rs
apps/identity/: main.rs
apps/im/: default.conf  dev1.conf  dev2.conf  main.rs  mod.rs  prompt.rs
apps/im/cmds/: channel_cmd.rs  device_cmd.rs  info_cmd.rs
apps/launcher/: default.conf  launcher.conf  main.rs
apps/shell/: config_sim.yaml  main.rs  node.yaml  node_sim.yaml
src/: appdata_store.rs  lib.rs
src/activeproxy/: client.rs  config.rs  connection.rs  managed.rs  mod.rs  packet.rs  state.rs  worker.rs
src/activeproxy/unitests/: test_activeproxy.rs  test_ap.conf
src/core/: bootstrap_channel.rs  cbor.rs  config.rs  connection_status.rs  connection_status_listener.rs  crypto_cache.rs  crypto_context.rs  crypto_identity.rs  cryptobox.rs  data_storage.rs  default_configuration.rs  dht.rs  error.rs  future.rs  id.rs  identity.rs  joint_result.rs  kbucket.rs  kbucket_entry.rs  kclosest_nodes.rs  lib.rs  logger.rs  lookup_option.rs  mod.rs  network.rs  node.rs  node_info.rs  node_runner.rs  node_status.rs  node_status_listener.rs  peer_info.rs  prefix.rs  routing_table.rs  rpccall.rs  scheduler.rs  server.rs  signature.rs  sqlite_storage.rs  stats.rs  test_id.rs  (+10 more)
src/core/errors/: argument_error.rs  before_valid_period.rs  crypto_error.rs  db_error.rs  expired_error.rs  io_error.rs  malformed.rs  mod.rs  network_error.rs  not_implemented.rs  permission_error.rs  protocol_error.rs  signature_error.rs  state_error.rs
src/core/identifier/: boson_identity_object_builder.rs  card.rs  card_builder.rs  credential.rs  credential_builder.rs  did_document.rs  did_document_builder.rs  did_url.rs  mod.rs  proof.rs  verifiable_credential.rs  verifiable_credential_builder.rs  verifiable_presentation.rs  verifiable_presentation_builder.rs  verification_method.rs  vouch.rs  vouch_builder.rs
src/core/msg/: announce_peer_req.rs  announce_peer_rsp.rs  (+15 more)
src/dht/: bootstrap_channel.rs  cached_identity.rs  cbor.rs  connection_status.rs  connection_status_listener.rs  constants.rs  consumer.rs  crypto_cache.rs  data_storage.rs  dht copy.rs  dht.rs  dht_verticle.rs  eligible_peers.rs  eligible_value.rs  future.rs  handler.rs  kbucket.rs  kbucket_entry.rs  kclosest_nodes.rs  local_timer_client.rs  local_timer_manager.rs  lookup_option.rs  mod.rs  node.rs  node_entry.rs  node_runner.rs  node_status.rs  node_status_listener.rs  promise copy.rs  promise.rs  routing_table.rs  rpccall.rs  scheduler copy.rs  scheduler.bak.rs  scheduler.rs  scheduler_error.rs  server.rs  sqlite_storage.rs  stats.rs  suspicious_node_detector.rs  (+9 more)
src/did/: boson_identity_object_builder.rs  card.rs  card_builder.rs  credential.rs  credential_builder.rs  did_constants.rs  did_document.rs  did_document_builder.rs  did_url.rs  didurl.rs  mod.rs  proof.rs  verifiable_credential.rs  verifiable_presentation_builder.rs  verification_method.rs  vouch.rs  vouch_builder.rs
src/messaging/: api_client.rs  channel.rs  channel_listener.rs  client.rs  client_builder.rs  client_device.rs  client_impl.rs  config.rs  config_adapter.rs  connection_listener.rs  contact.rs  contact_listener.rs  contact_manager.rs  contact_sequence.rs  contact_sync_result.rs  contact_update.rs  conversation.rs  crypto_identity.rs  device_profile.rs  errors.rs  friend_request.rs  friend_request_listener.rs  group.rs  group_adapter.rs  group_identity.rs  group_member.rs  group_permission.rs  group_role.rs  invite_ticket.rs  message.rs  message_builder.rs  message_client.rs  message_listener.rs  messaging_agent.rs  messaging_caps.rs  messaging_client.rs  messaging_client_builder.rs  messaging_repository.rs  mod.rs  profile.rs  (+9 more)
src/unitests/: mod.rs  test_addr.rs  test_find_node_rsp.rs  test_find_peer_req.rs  test_find_peer_rsp.rs  test_logger.rs  test_node_runner.rs  test_peer_info.rs  test_routing_table.rs  test_sqlite_storage.rs  test_token_man.rs  test_value.rs  test_version.rs  unitests.conf
tests/apitests/: apitests.conf  apitests1.conf  config.rs  cryptobox.rs  id.rs  lib.rs  mod.rs  node.rs  node.yaml  node_info.rs  peer_info.rs  prefix.rs  signature.rs  value.rs
(+219 files in other folders)
