[package]
name = "rphoton"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0
debug = true

[lib]
name = "boson"
path = "src/lib.rs"

[[test]]
name = "apitests"
path = "tests/apitests/lib.rs"

#[[bin]]
#name = "shell"
#path = "apps/shell/main.rs"

#[[bin]]
#name = "launcher"
#path = "apps/launcher/main.rs"

#[[bin]]
#name = "im"
#path = "apps/im/mod.rs"

[features]
devp = []
inspect = ["devp"]
default = ["devp"]

[dependencies]
diesel  = { version = "2.2.3",  features = ["sqlite"]   }
tokio   = { version = "1.35.1", features = ["full"]     }
tokio-util = { version = "0.7.13", features = ["time"] }
clap    = { version = "4.0",    features = ["derive"]   }
reqwest = { version = "0.13.1", features = ["json"]     }
moka    = { version = "0.12.15",features = ["sync"]     }

log                     = "0.4.22"
bs58                    = "0.5.0"
base64                  = "0.22.1"
hex                     = "0.4"
libc                    = "0.2.151"
sha2                    = "0.11.0"
rbtree                  = "0.2.0"
rand                    = "0.10.1"
futures                 = "0.3"
url                     = "2.5.4"
ciborium                = "0.2.1"
ciborium-io             = "0.2.1"
serde                   = "1.0"
serde_json              = "1.0"
serde_yaml              = "0.9"
serde_cbor              = "0.11"
serde_with              = "3.12.0"
serde_repr              = "0.1"
libsodium-sys-stable    = "1.20.4"
static_assertions       = "1.1.0"
unicode-normalization   = "0.1.22"
get_if_addrs            = "0.5.3"
once_cell               = "1.17"
rumqttc                 = "0.25.1"
md5                     = "0.8.0"
reedline                = "0.47.0"
indexmap                = "2.13.0"


[dev-dependencies]
serial_test = "2.0"

#[package.metadata.test]
#threads = 1